<resources>
    <string name="app_name">TiTa</string>


    <string name="action_settings">设置</string>

    <string name="music">音乐</string>
    <string name="find">发现</string>
    <string name="like">喜欢</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="others">其他</string>
    <string name="changeBackground">换肤</string>



    <!--左边列表的数据-->
    <string-array name="navlist">
        <item>音乐</item>
        <item>发现</item>
        <item>喜爱</item>
        <item>关于</item>
        <item>设置</item>
    </string-array>
    <!-- 标题-->
    <string name="title">TiTa</string>
    <string name="add_to">添加到</string>
    <string name="myfavor">我喜欢</string>
    <string name="delete">删除</string>
    <string name="detail">歌曲信息</string>
    <string name="song">歌曲</string>
    <string name="artist">歌手</string>
    <string name="new_songlist">新建歌单</string>
    <string name="title_default">欢迎来到我的音乐</string>
    <string name="artist_default">让音乐跟我走</string>
    <string name="local_list">本地列表</string>
    <string name="favor_list">我喜欢</string>

</resources>
